--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 煎蛋博客
 SEOTitle: 煎蛋的博客 | 煎蛋 Blog
 header-img: img/post-bg-desk.jpg
 email: liujieheng@gmail.com
-description: "生活虽然普普通通-但也要乐在其中\\人生虽然简简单单-但也要快乐一点"
+description: "生活虽然普普通通-但也要乐在其中----人生虽然简简单单-但也要快乐一点"
 keyword: "煎蛋, 煎蛋 Blog, 煎蛋的博客, liujieheng, 煎蛋博客, newuserljh, iOS, Apple, iPhone"
 url: "http://newuserljh.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
